data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_308.wast
;; 9. **Test Description:**    - A nested `block` structure where a `br` instruction targets a label with operand type mismatch, expect control flow to lead to `unreachable`.    - **Constraint: Result Type Matching**    - **Differential Behavior: The Wizard Engine should verify the operand types, whereas WebAssembly might bypass this check leading to erroneous `unreachable` execution.**

(assert_invalid
  (module
    (func $type-mismatch-in-block
      (block (result i32)
        (i32.const 1)
        (block (result f32)
          (br 1)
        )
      )
    )
  )
  "type mismatch"
)